--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,60 @@
 .profile-dropdown {
   position: absolute;
 }
+
+.navbar {
+
+  /* width: 100%; */
+  
+  height:20vh;
+  /* background-color: rgba(214, 214, 241, 0.619); */
+  /* justify-content: center; */
+
+  padding-left: 5%;
+  padding-right:5%;
+  margin:0;
+  /* align-items:center; */
+  /* padding-left: 5%;
+  padding-right:5%; */
+  /* border-bottom: 1px solid #d5d5d5; */
+}
+.navbar-links{
+  list-style-type: none;
+  display: inline-flex;
+  justify-content: space-between;
+  padding:0;
+  margin:0;
+  align-items:center;
+  width: 100%;
+  padding-top:1%;
+
+}
+.nav-links{
+  text-decoration: none;
+  color:black;
+  font-size: 14pt;
+}
+
+#musee{
+  font-size: 45pt;
+}
+
+#tickets-button{
+  /* background-color: yellow; */
+  height: 40px;
+  width: 100px;
+  background-color: rgb(240, 213, 76);
+  border:none;
+  font-size: 14pt;
+}
+
+#tickets-button:hover{
+  cursor:pointer;
+}
+
+#name-container{
+  /* background-color: red; */
+  /* padding-top:20%; */
+  position:absolute;
+  /* top:80px; */
+}
