--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -2,45 +2,38 @@
   position: absolute;
 }
 
-.navbar {
+.navbar { 
+  height:14vh;
+  box-sizing: border-box;
+  padding-left: 7%;
+  padding-right:7%;
+  display:inline-flex;
+  flex-direction: row;
+  /* background-color: purple; */
+  width:100%;
 
-  /* width: 100%; */
-  
-  height:20vh;
-  /* background-color: rgba(214, 214, 241, 0.619); */
-  /* justify-content: center; */
-  /* display:flex; */
-  padding-left: 5%;
-  padding-right:5%;
-  
-  /* justify-content: space-between; */
-  /* margin-left:auto; */
-  /* margin-right:auto; */
-  /* align-items:center; */
-  /* padding-left: 5%;
-  padding-right:5%; */
-  /* border-bottom: 1px solid #d5d5d5; */
 }
 .navbar-links{
-  list-style-type: none;
-  display: flex;
-  /* position:relative; */
-  justify-content: space-between;
-  /* align-items: flex-end; */
-  /* flex-direction:row-reverse; */
-  /* justify-content: flex-end; */
   
-  align-items:center;
-  /* width: 100%; */
-  padding-top:1%;
-  /* margin-left:auto; */
+  /* background-color: red; */
+  box-sizing: border-box;
+  padding-top: 2%;
+  margin-right:auto;
+  display:inline-flex;
+  align-items: center;
+  flex:1;
+  justify-content: space-between;
+  height:fit-content;
 
 }
 .nav-links{
   text-decoration: none;
   color:black;
   font-size: 14pt;
-  margin:0 5px;
+ 
+}
+.underline:hover{
+  text-decoration: underline;
 }
 
 #musee{
@@ -61,8 +54,22 @@
 }
 
 #name-container{
+  flex: 2;
   /* background-color: red; */
+  display: flex;
+  height: 130px;
+  align-items: center;
   /* padding-top:20%; */
-  position:absolute;
+  /* position:absolute; */
   /* top:80px; */
+}
+
+
+.other-links{
+  padding-left: 7%;
+  box-sizing: border-box;
+  list-style-type: none;
+  display: inline-flex;
+  gap:30px;
+  padding-bottom: 2%;
 }
