--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -4,6 +4,10 @@
 
 .navbar { 
   height:14vh;
+  position:sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
   box-sizing: border-box;
   padding-left: 7%;
   padding-right:7%;
@@ -14,10 +18,14 @@
 
 }
 .navbar-links{
+  position:sticky;
+  top: 0;
+  z-index: 2000; /* Ensure it's above other content */
+  background-color: white; /* Adjust background color as needed */
   
   /* background-color: red; */
   box-sizing: border-box;
-  padding-top: 2%;
+  margin-top: 2%;
   margin-right:auto;
   display:inline-flex;
   align-items: center;
@@ -59,6 +67,8 @@
   display: flex;
   height: 130px;
   align-items: center;
+  /* margin-top:40px; */
+  
   /* padding-top:20%; */
   /* position:absolute; */
   /* top:80px; */
@@ -66,6 +76,10 @@
 
 
 .other-links{
+  position:sticky;
+  top: 0;
+  z-index: 1000; /* Ensure it's above other content */
+  background-color: white; /* Adjust background color as needed */
   padding-left: 7%;
   box-sizing: border-box;
   list-style-type: none;
