--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -4,10 +4,11 @@
 
 .navbar { 
   height:14vh;
-  position:sticky;
+  /* overflow-y: scroll; */
+  /* position:sticky;
   top: 0;
   z-index: 1000;
-  background-color: white;
+  background-color: white; */
   box-sizing: border-box;
   padding-left: 7%;
   padding-right:7%;
@@ -19,7 +20,7 @@
 }
 .navbar-links{
   position:sticky;
-  top: 0;
+  top: 20px;
   z-index: 2000; /* Ensure it's above other content */
   background-color: white; /* Adjust background color as needed */
   
@@ -32,6 +33,7 @@
   flex:1;
   justify-content: space-between;
   height:fit-content;
+  /* background-color: red; */
 
 }
 .nav-links{
@@ -55,6 +57,7 @@
   background-color: rgb(240, 213, 76);
   border:none;
   font-size: 14pt;
+
 }
 
 #tickets-button:hover{
@@ -65,7 +68,7 @@
   flex: 2;
   /* background-color: red; */
   display: flex;
-  height: 130px;
+  height: 140px;
   align-items: center;
   /* margin-top:40px; */
   
@@ -85,5 +88,7 @@
   list-style-type: none;
   display: inline-flex;
   gap:30px;
-  padding-bottom: 2%;
+  padding-bottom: 1.5%;
+  padding-top:1%;
+  width:100%
 }
