--- a/react-vite/src/components/MuseumHomePage/MuseumHomePage.css
+++ b/react-vite/src/components/MuseumHomePage/MuseumHomePage.css
@@ -93,3 +93,14 @@
     
 
 }
+
+section{
+    /* padding:7%; */
+    padding-top:2%;
+    padding-left:7%;
+    height: 50vh;
+}
+
+.h4home{
+    font-size: 15pt;
+}
