--- a/react-vite/src/components/MembershipsPage/MembershipPage.css
+++ b/react-vite/src/components/MembershipsPage/MembershipPage.css
@@ -4,10 +4,44 @@
     flex-wrap:wrap;
     gap:20px;
     justify-content: center;
+    padding-bottom: 7%;
 }
 .membership-tile{
     background-color: rgb(88, 88, 182);
     height: 500px;
     width: 395px;
+    padding:2%;
 }
 
+.discover-mem{
+    /* padding-top:2%; */
+    text-align: center;
+    font-size: 35pt;
+}
+
+.mem-intro{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 15%;
+    padding-right: 15%;
+    /* width: 50%; */
+    text-align: center;
+    font-size:20pt;
+    padding-top:1%;
+    padding-bottom:1%;
+    /* width: 50%; */
+    /* width:100px; */
+    /* align-self: center;
+    justify-self: center; */
+}
+
+#intro{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#mem-name{
+    font-size: 28pt;
+}
