--- a/react-vite/src/components/MembershipsPage/MembershipPage.css
+++ b/react-vite/src/components/MembershipsPage/MembershipPage.css
@@ -10,8 +10,13 @@
     background-color: rgb(88, 88, 182);
     height: 500px;
     width: 395px;
-    padding:2%;
+    padding:3%;
+    box-sizing:border-box;
+    display:flex;
+    flex-direction:column;
+    gap: 10px;
 }
+
 
 .discover-mem{
     /* padding-top:2%; */
@@ -44,4 +49,31 @@
 
 #mem-name{
     font-size: 28pt;
+}
+
+.membership-button{
+    width: 100px;
+    height:30px;
+    color:white;
+    background-color: black;
+    border:none;
+    font-size: 12pt;
+}
+
+.membership-button:hover{
+    cursor: pointer;
+}
+
+#membership-description{
+    padding-top:10px;
+    padding-bottom:10px;
+
+}
+
+#membership-price{
+    font-size: 14pt;
+}
+
+.member-d-list{
+    padding-left:7%;
 }
