--- a/react-vite/src/components/MembershipsPage/MembershipPage.css
+++ b/react-vite/src/components/MembershipsPage/MembershipPage.css
@@ -10,13 +10,36 @@
     background-color: rgb(88, 88, 182);
     min-height: 400px;
     width: 395px;
-    padding:4%;
+    padding:2%;
     box-sizing:border-box;
     display:flex;
     flex-direction:column;
     gap: 10px;
     color:rgb(235, 152, 0);
 }
+#Access{
+    background-color:rgb(255, 152, 152);
+    color: rgb(6, 107, 14);
+
+}
+
+#Access:hover{
+    cursor:pointer;
+    background-color:rgb(6, 107, 14) ;
+    color:rgb(255, 152, 152);
+}
+
+#Supporting{
+    color:rgb(40, 40, 158);
+    background-color: rgb(221, 255, 128);
+}
+#Supporting:hover{
+    cursor:pointer;
+    color:rgb(221, 255, 128);
+    background-color:rgb(40, 40, 158) ;
+
+}
+
 
 .membership-tile:hover{
     cursor:pointer;
