--- a/react-vite/src/components/MembershipDetails/MembershipDetail.css
+++ b/react-vite/src/components/MembershipDetails/MembershipDetail.css
@@ -17,4 +17,19 @@
 }
 .user-mem-container{
     display:flex;
+    /* flex-direction: row;
+    flex-wrap:wrap;
+    gap:20px;
+    justify-content: center;
+    padding-bottom: 7%; */
 }
+
+/* .mem-block{
+    display:flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    gap:20px;
+    justify-content: center;
+    padding-bottom: 7%;
+} */
+
