original exposition images stay the same

--- a/react-vite/src/components/MembershipDetails/MembershipDetail.css
+++ b/react-vite/src/components/MembershipDetails/MembershipDetail.css
@@ -5,7 +5,7 @@
 }
 
 .user-membership-button{
-    width: 100px;
+    width: fit-content;
     min-height:30px;
     color:white;
     background-color: black;
@@ -13,8 +13,13 @@
     box-sizing: border-box;
     font-size: 12pt;
     margin-top:auto;
+    padding:2%;
    
 }
+.user-membership-button:hover{
+    cursor: pointer;
+}
+
 .user-mem-container{
     display:flex;
     /* flex-direction: row;
