--- a/react-vite/src/components/MembershipDetails/MembershipDetail.css
+++ b/react-vite/src/components/MembershipDetails/MembershipDetail.css
@@ -29,12 +29,15 @@
     padding-bottom: 7%; */
 }
 
-/* .mem-block{
+.mem-block{
+    box-sizing: border-box;
     display:flex;
     flex-direction: row;
     flex-wrap:wrap;
     gap:20px;
     justify-content: center;
     padding-bottom: 7%;
-} */
+}
+
+
 
