--- a/react-vite/src/components/MembershipsPage/MembershipPage.css
+++ b/react-vite/src/components/MembershipsPage/MembershipPage.css
@@ -10,7 +10,7 @@
     background-color: rgb(88, 88, 182);
     min-height: 400px;
     width: 395px;
-    padding:2%;
+    padding:30px;
     box-sizing:border-box;
     display:flex;
     flex-direction:column;
@@ -22,7 +22,7 @@
     color: rgb(6, 107, 14);
     min-height: 400px;
     width: 395px;
-    padding:2%;
+    
     box-sizing:border-box;
     display:flex;
     flex-direction:column;
