styled default buttons and links

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -92,3 +92,14 @@
   padding-top:1%;
   width:100%
 }
+
+
+.manage-link{
+  color:black;
+  text-decoration: none;
+}
+
+.manage-link:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
