--- a/react-vite/src/components/ManageReviews/ManageReviews.css
+++ b/react-vite/src/components/ManageReviews/ManageReviews.css
@@ -1,15 +1,25 @@
-
+.manage-title{
+    padding-left: 7%;
+}
 
 .manage-reviews{
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-left:7%;
+    padding-right:7%;
 }
 
 .user-review-tile{
-    width:200px;
+    max-width:200px;
     display:flex;
     flex-direction: column;
-    gap: 10px;
+    background-color: rgba(255, 15, 15, 0.634);
+    flex-wrap: wrap;
+    text-overflow: clip;
+    overflow-y:auto;
+    text-wrap: wrap;
 }
 .up-button{
     max-width: fit-content;
@@ -23,3 +33,9 @@
     padding: 2%;
    
 }
+
+.item-review{
+    color:black;
+    /* text-decoration: none; */
+}
+
