styled delete modal and formatted posted dates

--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -22,4 +22,8 @@
 #modal-content {
   position: absolute;
   background-color:white;
+  height:fit-content;
+  width:fit-content;
+  /* display:flex; */
+  /* align-items: baseline; */
 }
