--- a/react-vite/src/components/ManageReviews/ManageReviews.css
+++ b/react-vite/src/components/ManageReviews/ManageReviews.css
@@ -14,7 +14,8 @@
 }
 
 .user-review-tile{
-    max-width:200px;
+    width:240px;
+    height:240px;
     display:flex;
     flex-direction: column;
     /* background-color: rgba(255, 15, 15, 0.634); */
@@ -49,4 +50,8 @@
     flex-direction: row;
     margin-top: auto;
     gap:10px;
+}
+
+.review{
+    background-color: rgba(211, 211, 211, 0.685);
 }
