--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .archivo-black-regular {
     font-family: "Archivo Black", sans-serif;
     font-weight: 400;
