all past days are greyed out

--- a/react-vite/src/components/TicketsPage/TicketsPage.css
+++ b/react-vite/src/components/TicketsPage/TicketsPage.css
@@ -2,6 +2,7 @@
 .flex{
     display:flex;
     flex-direction: row;
+    font-size: 2rem;
 }
 
 .grid-cols-7{
@@ -28,4 +29,8 @@
 
 .text-center{
     text-align: center;
+}
+
+.past{
+    color: lightgray;
 }
