--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -14,13 +14,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #5a5a5a;
+    /* background-color: #5a5a5a; */
+    background-color: rgb(246, 246, 246);
     text-align: center;
     padding: 4px 8px 4px 8px;
     bottom:0;
     width:100%;
     /* background-color: #333; */
-    color: #fff;
+    color:black;
     padding: 10px;
 }
 
@@ -40,7 +41,8 @@
 }
 
 .footer a {
-  color: #fff;
+  /* color: #fff; */
+  color: black;
   text-decoration: none;
 }
 
