--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -1,10 +1,10 @@
 /* TODO: Add sitewide styles */
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
-
+/* 
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 .archivo-black-regular {
     font-family: "Archivo Black", sans-serif;
