--- a/react-vite/src/components/TicketsPage/TicketsPage.css
+++ b/react-vite/src/components/TicketsPage/TicketsPage.css
@@ -55,12 +55,14 @@
     flex-direction: column;
     padding-left: 3rem;
     padding-top: 1rem;
+    width: 50vw;
 }
 
 .ticket-row{
     display:flex;
     flex-direction: row;
     padding-bottom: .5rem;
+    justify-content: space-between;
 }
 
 .ticket-left{
