--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -10,19 +10,19 @@
     height: 100px;
     position: relative;
     padding-top: 20px;
-    /* height: 200px; */
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #5a5a5a; */
+
     background-color: rgb(246, 246, 246);
     text-align: center;
-    padding: 4px 8px 4px 8px;
+    /* padding: 4px 8px 4px 8px; */
     bottom:0;
     width:100%;
-    /* background-color: #333; */
+
     color:black;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .logo:hover{
@@ -48,4 +48,8 @@
 
 .footer a:hover {
   text-decoration: underline;
+}
+
+#tickets-page{
+  height:100vh;
 }
