--- a/react-vite/src/components/TicketsPage/TicketsPage.css
+++ b/react-vite/src/components/TicketsPage/TicketsPage.css
@@ -80,6 +80,8 @@
 .checkout-info{
     display:flex;
     flex-direction:column;
+    gap: 1rem;
+    padding-top: 1rem;
 }
 
 
@@ -87,11 +89,18 @@
     /* width: 30rem; */
     /* height: 30rem; */
     /* position: sticky; */
+    display:flex;
+    flex-direction:column;
+    gap: 1rem;
+    /* background-color: white;
+    position: fixed; */
 }
 
 .ticket-purchase{
     display:flex;
     flex-direction: row;
+    /* justify-content: space-between; */
+    gap: 5.5rem;
 }
 
 
@@ -112,4 +121,82 @@
 
 .checkout-button:not(:disabled){
     cursor: pointer;
+}
+
+#amt{
+    font-size: 15pt;
+}
+
+#amt-two{
+    font-size: 11pt;
+    margin-left: .5rem;
+}
+
+.date-info{
+    display:flex;
+    flex-direction:column;
+}
+
+.font-semibold{
+    padding-bottom: 2rem;
+}
+
+
+.modal-content{
+    /* background-color: rgb(222, 221, 221); */
+    border: 2px solid black;
+    padding: 2rem;
+    /* position:fixed; */
+
+}
+
+/* #myModal{
+    background-color: rgb(222, 221, 221);
+  
+} */
+
+.justify-center{
+    justify-content: space-between;
+}
+
+.padding{
+    padding-left: 3rem;
+    padding-right: 8rem;
+}
+
+.padding-bottom{
+    padding-bottom: .5rem;
+}
+
+.checkout{
+    width: 20rem;
+    /* height: 18rem; */
+    /* background-color: white;
+    position: fixed;
+    left:50rem; */
+
+}
+
+
+
+.ticket-info{
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#total{
+    margin-left:auto;
+}
+
+/* .tickets-select{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+} */
+
+
+.padding-left-3rem{
+    padding-left:3rem;
 }
