--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -41,3 +41,12 @@ h1{
     /* font-weight:100; */
     /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 }
+
+html, body{
+    height:100%;
+    margin:0;
+}
+
+#root, body{
+    height:100vh;
+}
