--- a/react-vite/src/components/Navigation/ProfileButton.css
+++ b/react-vite/src/components/Navigation/ProfileButton.css
@@ -213,13 +213,29 @@ cursor: default;
     padding: 5px 10px;
     /* border-radius: 5px; */
     cursor: pointer;
-  }
+}
 
-  .profile-dropdown li:hover{
+/* .profile-dropdown li:hover{
     text-decoration: underline;
-  }
+} */
 
 
-  .profile-button:hover{
+/* .profile-button:hover{
     text-decoration: underline;
+} */
+
+
+.reg{
+    text-decoration: none;
+    
+}
+
+ul{
+    list-style: none;
+}
+ul, li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
+  
