datetimes causing one off bugs

--- a/react-vite/src/components/TicketsPage/TicketsPage.css
+++ b/react-vite/src/components/TicketsPage/TicketsPage.css
@@ -245,3 +245,12 @@
 .font-2rem{
     font-size: 2rem;
 }
+
+
+.black-background{
+    background-color: black;
+}
+
+.white-text{
+    color:white;
+}
