--- a/react-vite/src/components/Navigation/ProfileButton.css
+++ b/react-vite/src/components/Navigation/ProfileButton.css
@@ -13,7 +13,9 @@
 #profile-button:hover{
     cursor:pointer;
 }
-
+.small-caps{
+    font-variant: small-caps;
+}
 .profile-button{
    
     position:relative;
