Store, buttons, and sort-by cursor changes

--- a/react-vite/src/components/StoreHomePage/StoreHomePage.css
+++ b/react-vite/src/components/StoreHomePage/StoreHomePage.css
@@ -9,6 +9,10 @@
 .item-tile{
     width:215px;
     height:fit-content;
+    cursor:pointer;
+}
+#sort-by-hover{
+    cursor: pointer;
 }
 
 #store-preview-image {
