--- a/react-vite/src/components/ItemDetailPage/itemDetailPage.css
+++ b/react-vite/src/components/ItemDetailPage/itemDetailPage.css
@@ -57,6 +57,9 @@
     text-decoration: underline;
     cursor:pointer;
 }
+#pointer{
+    cursor: pointer;
+}
 
 .review-tile{
    border: 2px black solid;
